infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      apps: auth-mongo
    template:
      metadata: 
        labels:
          apps: auth-mongo
      specs:
        containers:
          - name: auth-mongo
            image: monhgo
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-depl
spec:            
  selector:
    app: auth-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
